--- a/source/beeldmateriaal.html.erb
+++ b/source/beeldmateriaal.html.erb
@@ -65,7 +65,7 @@
       <div class="background-tab" id="video-tab">
         <video id="beeld-video" class="video-js vjs-big-play-centered" controls preload="auto"
           data-setup="{}">
-          <source src="../videos/watwijdoenvideo.mp4" type='video/mp4'>
+          <source src="../videos/watwijdoen.m4v" type='video/mp4'>
             <!-- <source src="MY_VIDEO.webm" type='video/webm'> -->
           <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a web browser that
