--- a/source/stylesheets/components/_buttons.scss
+++ b/source/stylesheets/components/_buttons.scss
@@ -13,11 +13,15 @@
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.2);
 
   &:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
+    cursor: pointer;
   }
   a {
     color: white;
     text-decoration: none;
+  }
+  &:disabled {
+    opacity: 0.5;
   }
 }
 
