added round me for medium and larger screens

--- a/source/beeldmateriaal.html.erb
+++ b/source/beeldmateriaal.html.erb
@@ -16,6 +16,9 @@
     <li class="nav-item">
     <a class="nav-link" id="pills-5-tab" data-toggle="pill" href="#pills-5" role="tab" aria-controls="pills-5" aria-selected="false">Artist impressie</a>
   </li>
+  <li class="nav-item d-none d-md-block">
+    <a class="nav-link" id="pills-6-tab" data-toggle="pill" href="#pills-6" role="tab" aria-controls="pills-6" aria-selected="false">Roundme</a>
+  </li>
 </ul>
 
 
@@ -131,6 +134,29 @@
           </div>
         </div>
       </div>
+
+      <div class="tab-pane fade d-none d-md-block" id="pills-6" role="tabpanel" aria-labelledby="pills-6-tab">
+      <div class="tab-container">
+        <div class="background-tab" id="roundme-tab">
+            <iframe class=iframe-roundme src='https://roundme.com/embed/sS5z1911RPgCNbOI28pj' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+          <div class="tab-text">
+            <div class="tab-title">
+              <h2><strong>Roundme:</strong></h2>
+            </div>
+            <ul class='tab-list'>
+              <li>
+                Roundme
+              </li>
+            </ul>
+            <div id="beeld-button-container" class="pakket-button-container">
+              <h3 class="green-button plan-button"><%= link_to "Online inplannen", "/inplannen.html" %></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
     </div>
 </div>
   
