--- a/source/inplannen.html.erb
+++ b/source/inplannen.html.erb
@@ -1,30 +1,25 @@
 
 <div id="plan-container">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-4 col-md-offset-4">
-        <div id="widget-container">
-          <h1 id="plan-title">Plan hier direct uw afspraak</h1>
-          <div id="oa_widget" class="widget-js">
-          </div>
-        </div>
-      </div>
+  <div id="widget-container">
+    <h1 id="plan-title">Plan hier direct uw afspraak</h1>
+    <div id="oa_widget" class="widget-js">
     </div>
   </div>
-</div>
-
-	<div id="app"></div>
-
+  <div id="app">
+  </div>
   <div id="filesubmit">
-    <h4>Voeg hier de plattegrond van de woning toe</h4>
+    <h4>Heb je een bestaande plattegrond van de woning? Dan kan je deze hier toevoegen.</h4>
     <div class="upload-container">
-      <input type="file" id="file-input" accept="image/*"/>
+      <input type="file" id="file-input" accept="image/*, .pdf, .doc, .docx"/>
       <button id="file-submit" class="green-button">UPLOADEN</button>
     </div>
     <div class="hidden" id="success_message">Upload geslaagd!</div>
     <div class="hidden" id="error_message">Upload mislukt!</div>
     <div class="hidden" id="upload_message">Aan het uploaden...</div>
+  </div>
 </div>
+
+
 
 	<!-- Firebase App is always required and must be first -->
 	<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js">
