--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,7 +12,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "application" %>
-
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
   
   <%# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cosmo/bootstrap.min.css" crossorigin="anonymous"> %>
   <%= favicon_tag 'images/favicon.png' %>
