--- a/source/beeldmateriaal.html.erb
+++ b/source/beeldmateriaal.html.erb
@@ -142,11 +142,11 @@
         </div>
           <div class="tab-text">
             <div class="tab-title">
-              <h2><strong>Roundme:</strong></h2>
+              <h2><strong>Panotour:</strong></h2>
             </div>
             <ul class='tab-list'>
               <li>
-                Roundme
+                
               </li>
             </ul>
             <div id="beeld-button-container" class="pakket-button-container">
