--- a/source/stylesheets/pages/_inplannen.scss
+++ b/source/stylesheets/pages/_inplannen.scss
@@ -10,10 +10,16 @@
   min-height: 650px;
   padding-bottom: 50px;
   display: flex;
+  @media (max-width: 750px) {
+    flex-direction: column;
+  }
 }
 
 #widget-container {
-  width: 60%;
+  width: 50%;
+  @media (max-width: 750px) {
+    width: auto;
+  }
 }
 
 #filesubmit {
@@ -23,7 +29,11 @@
   padding-bottom: 70px;
   flex-direction: column;
   padding-right: 100px;
-  width: 40%;
+  width: 50%;
+  @media (max-width: 750px) {
+    width: auto;
+    padding: 0 10%;
+  }
   h4 {
     color: $green;
     margin-bottom: 20px;
@@ -34,6 +44,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 991px) {
+    flex-direction: column;
+  }
 }
 
 .message_upload {
@@ -54,4 +67,19 @@
   @extend .message_upload;
   color: $red;
   border: 1px solid $red;
+}
+
+#widget-booking-content {
+  // i-frame
+  display: flex;
+  justify-content: center;
+}
+
+#oa_widget {
+  display: flex !important;
+  justify-content: center !important;
+}
+
+#file-input {
+  margin: 10px 0 20px;
 }
