changed name roundme in pantotour

--- a/source/beeldmateriaal.html.erb
+++ b/source/beeldmateriaal.html.erb
@@ -17,7 +17,7 @@
     <a class="nav-link" id="pills-5-tab" data-toggle="pill" href="#pills-5" role="tab" aria-controls="pills-5" aria-selected="false">Artist impressie</a>
   </li>
   <li class="nav-item d-none d-md-block">
-    <a class="nav-link" id="pills-6-tab" data-toggle="pill" href="#pills-6" role="tab" aria-controls="pills-6" aria-selected="false">Roundme</a>
+    <a class="nav-link" id="pills-6-tab" data-toggle="pill" href="#pills-6" role="tab" aria-controls="pills-6" aria-selected="false">Panotour</a>
   </li>
 </ul>
 
